2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/string.cdl: Fix doc link.

2001-11-27  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/string.cdl (CYGFUN_LIBC_STRING_BSD_FUNCS): New option to indicate
	provision of BSD-ish string functions.
	* include/bsdstring.h: New header to export BSD string func prototypes.
	* src/bsdstring.cxx: New file.

2001-08-21  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/string.cdl (CYGSEM_LIBC_STRING_PER_THREAD_STRTOK): Improve
	dependencies.

2001-08-10  Robin Farine  <acnrf@dial.eunet.ch>

	* src/memchr.cxx (__memchr): Don't check string validity if number
	of bytes to operate on is 0.
	* src/memcmp.cxx (__memcmp): Ditto.
	* src/memmove.cxx (__memmove): Ditto.
	* src/strncat.cxx (__strncat): Ditto.
	* src/strncmp.cxx (__strncmp): Ditto.
	* src/strncpy.cxx (__strncpy): Ditto.
	* src/strxfrm.cxx (__strxfrm): Ditto.

2000-05-20  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* src/strtok.cxx: Remove aliases

2000-05-02  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* New package
	Separated original libc out into separate packages on functional
	boundaries.
	Header files are now managed by isoinfra package
	Plenty of cleanups done, but no major functionality changes

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//